aclaración añadida en capítulo 2. Añadida funcinoalidad de notas (para notas del traductor) a la hora de la generación de los ficheros .html. Ahora pueden añadirse notas usando :::noteNOTA::: en el .md a editar. Posiblemente no funcione al compilar para latex u otros formatos. TODO.

--- a/epub/style.css
+++ b/epub/style.css
@@ -158,3 +158,20 @@ ol li p {
 .cm-atom {color: #219;}
 .cm-number {color: #164;}
 .cm-def {color: #00f;}
+
+
+.translator-note {
+  background-color: #f8f9fa;
+  border-left: 4px solid #e9da0875;
+  padding: 0px 12px;
+  font-size: medium;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri,   'Trebuchet MS', sans-serif;
+  word-spacing: 0.2em;
+  margin: 10px 0;
+  font-style: italic;
+}
+.translator-note code {
+  font-size: inherit;
+  font-family: 'Courier New', Courier, monospace;    
+  background-color: #f1f1f100;
+}
