--- a/html/css/ejs.css
+++ b/html/css/ejs.css
@@ -455,3 +455,21 @@ sub {
 sup {
   font-size: 70%;
 }
+
+
+.translator-note {
+  background-color: #f8f9fa;
+  border-left: 4px solid #e9da0875;
+  padding: 0px 12px;
+  font-size: medium;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  word-spacing: 0.2em;
+  margin: 10px 0;
+  font-style: italic;
+}
+.translator-note code {
+  font-size: inherit;
+  font-family: 'Courier New', Courier, monospace;    
+  background-color: #f1f1f100;
+  }
+  
